fixed due to new design

--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title class="is-hidden" lang="en">Web Studio v.2</title>
+    <title class="is-hidden" lang="en">Web Studio v.3</title>
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
@@ -119,11 +119,11 @@
               <img
                 class="project-img"
                 src="./img/potfolio-img/techno.jpg"
-                width="380"
+                width="370"
                 height="294"
                 alt="project image"
               />
-              <!-- Пока только в этом элементе абзац будет видимым  -->
+              <!-- Пока этот абзац не будет видимым нигде -->
               <p class="hover-text">
                 Технокряк это современная площадка распространения коронавируса.
                 Компании используют эту платформу для цифрового шпионажа и атак
@@ -140,7 +140,7 @@
               <img
                 class="project-img"
                 src="./img/potfolio-img/basket.jpg"
-                width="380"
+                width="370"
                 height="294"
                 alt="project image"
               />
@@ -150,7 +150,7 @@
                 на защищённые сервера конкурентов.
               </p>
               <div class="project-title-box">
-                <h2 class="project-title">Постер New Orlean vs Golden Stars</h2>
+                <h2 class="project-title">Постер New Orlean vs Golden Star</h2>
                 <p class="project-type">Дизайн</p>
               </div>
             </a>
@@ -160,7 +160,7 @@
               <img
                 class="project-img"
                 src="./img/potfolio-img/seafood.jpg"
-                width="380"
+                width="370"
                 height="294"
                 alt="project image"
               />
@@ -180,7 +180,7 @@
               <img
                 class="project-img"
                 src="./img/potfolio-img/headphones.jpg"
-                width="380"
+                width="370"
                 height="294"
                 alt="project image"
               />
@@ -200,7 +200,7 @@
               <img
                 class="project-img"
                 src="./img/potfolio-img/boxes.jpg"
-                width="380"
+                width="370"
                 height="294"
                 alt="project image"
               />
@@ -220,7 +220,7 @@
               <img
                 class="project-img"
                 src="./img/potfolio-img/monitor.jpg"
-                width="380"
+                width="370"
                 height="294"
                 alt="project image"
               />
@@ -240,7 +240,7 @@
               <img
                 class="project-img"
                 src="./img/potfolio-img/magazine.jpg"
-                width="380"
+                width="370"
                 height="294"
                 alt="project image"
               />
@@ -260,7 +260,7 @@
               <img
                 class="project-img"
                 src="./img/potfolio-img/tag.jpg"
-                width="380"
+                width="370"
                 height="294"
                 alt="project image"
               />
@@ -280,7 +280,7 @@
               <img
                 class="project-img"
                 src="./img/potfolio-img/laptop.jpg"
-                width="380"
+                width="370"
                 height="294"
                 alt="project image"
               />
